Fix overlapping slider handles

--- a/src/scss/components/slider.scss
+++ b/src/scss/components/slider.scss
@@ -28,6 +28,10 @@
       -webkit-transform: scale(1.25);
       transform: scale(1.25);
     }
+
+    &.overlap {
+      z-index: 3;
+    }
   }
 
   .range {
